--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   material_design_icons_flutter: ^6.0.7096
   intl: ^0.18.0
   graphic: ^1.0.1
-
+  fl_chart: ^0.62.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
