--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   intl: ^0.18.0
   graphic: ^1.0.1
   fl_chart: ^0.62.0
+  shared_preferences:
+  percent_indicator:
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
