--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   material_design_icons_flutter: ^6.0.7096
-  intl: ^0.18.0
+  intl: ^0.18.1
   graphic: ^1.0.1
   fl_chart: ^0.62.0
   shared_preferences:
-  percent_indicator:
+  percent_indicator: 
+  provider:
+  jwt_decoder: ^2.0.1
+  dio:
+  http: ^0.13.6
+
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
