--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
   material_design_icons_flutter: ^6.0.7096
-  intl: ^0.18.1
+  intl: ^0.18.0
   graphic: ^1.0.1
-  fl_chart: ^0.62.0
-  shared_preferences:
-  percent_indicator: 
-  provider:
-  jwt_decoder: ^2.0.1
-  dio:
-  http: ^0.13.6
+  shared_preferences: ^2.1.0
+  flutter_login: ^4.1.1
+  percent_indicator: ^4.0.1
+  flutter_toggle_tab: ^1.3.0
   floor: ^1.4.2
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  google_nav_bar: ^5.0.6
+  flutter_calendar_carousel: ^2.4.2
+  video_player: ^2.6.1
+  jwt_decoder: ^2.0.1
+  http: 
+  provider:
+  fl_chart:
 
   
   # The following adds the Cupertino Icons font to your application.
