--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_calendar_carousel: ^2.4.2
   video_player: ^2.6.1
   jwt_decoder: ^2.0.1
+  dio: ^5.0.0
   http: 
   provider:
   fl_chart:
