--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\src\flutter_windows_3.7.6-stable
-FLUTTER_APPLICATION_PATH=C:\Users\User\Desktop\Hypnos-ted-master\Hypnos-ted-master
+FLUTTER_APPLICATION_PATH=C:\Users\User\Desktop\Hypnos-ted-master\Hypnos- Copia
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
