--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   provider: ^6.0.5
   graphic: ^2.2.0
   fl_chart:
-
+  syncfusion_flutter_charts: ^22.1.36
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
