--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,17 +41,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   google_nav_bar: ^5.0.6
-  flutter_calendar_carousel: ^2.4.2
+  table_calendar: ^3.0.9
   video_player: ^2.6.1
   jwt_decoder: ^2.0.1
   dio: ^5.0.0
   provider: ^6.0.5
   fl_chart:
-
+  audioplayers: ^0.20.1
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sqlite_viewer: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,7 @@ flutter:
     - assets/login/
     - assets/info/
     - assets/exercise/
+    - assets/audio/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
