--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   graphic: ^2.2.0
   fl_chart:
   syncfusion_flutter_charts: ^22.1.36
+  sqlite_viewer: ^1.0.5
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
