--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   fl_chart:
   syncfusion_flutter_charts: ^22.1.36
   sqlite_viewer: ^1.0.5
+  syncfusion_flutter_gauges:
+  table_calendar: ^3.0.9 
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
